fix: fix markdown table width overflow issue (#95)

--- a/app/src/assets/markdown/theme.less
+++ b/app/src/assets/markdown/theme.less
@@ -290,8 +290,7 @@
   border-spacing: 0;
   border-collapse: collapse;
   display: block;
-  width: max-content;
-  max-width: 100%;
+  width: 100%;
   overflow: auto;
 }
 
